--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,20 +30,20 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!!!!!!"
         
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t fjsalmeronherrero/docker-graphql:0.0.2 .
-    #     docker build -t fjsalmeronherrero/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t fjsalmeronherrero/docker-graphql:$NEW_VERSION .
+        docker build -t fjsalmeronherrero/docker-graphql:latest .
         
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push fjsalmeronherrero/docker-graphql:0.0.2
-    #     docker push fjsalmeronherrero/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push fjsalmeronherrero/docker-graphql:$NEW_VERSION
+        docker push fjsalmeronherrero/docker-graphql:latest
     
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
